<resources>
    <string name="app_name">mad-project</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="join_instagram_to_post">Join instagram to post</string>
    <string name="continue_with_google">Continue with google</string>
    <string name="terms">By signing up, you agree to our Terms, privacy policy, and Cookie use.</string>
    <string name="have_an_account">Already have an account?</string>
    <string name="login_text">Log in</string>
    <string name="create_acoount">Create Acoount</string>
    <string name="create_your_account">create your account</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="login_btn">Login</string>
    <string name="login_account">Login to Account</string>
    <string name="profile">profile</string>
    <string name="reels">reels</string>
    <string name="addpost">addPost</string>
    <string name="home">home</string>
    <string name="search">search</string>
    <string name="Profile">Profile</string>
    <string name="Reels">Reels</string>
    <string name="Post">Post</string>
    <string name="Search">Search</string>
    <string name="Home">Home</string>
    <string name="settings">Settings</string>
    <string name="threads">Threads</string>
    <string name="your_activity">Your activity</string>
    <string name="archive">Archive</string>
    <string name="qr_code">QR code</string>
    <string name="saved">saved</string>
    <string name="supervision">Supervision</string>
    <string name="orders_and_payments">Orders and payments</string>
    <string name="meta_verified">Meta verified</string>
    <string name="close_friends">Close friends</string>
    <string name="menu">menu</string>
    <string name="opne">open navigation drawer</string>
    <string name="close">close navigation drawer</string>
    <string name="notifications">Notifications</string>
    <string name="log_out">Log out</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="posts">posts</string>
    <string name="followers">followers</string>
    <string name="_0">0</string>
    <string name="following">following</string>
    <string name="username">userName</string>
    <string name="edit_profile_">Edit profile</string>
    <string name="edit_picture">Edit picture</string>
    <string name="name_">Name</string>
    <string name="Username">Username</string>
    <string name="bio">Bio</string>
    <string name="save">save</string>
</resources>