<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingStart="20dp"
    android:paddingEnd="20dp">
    <de.hdodenhof.circleimageview.CircleImageView
        app:civ_border_width="2dp"
        app:civ_border_color="#636363"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:id="@+id/ci_ProfilePhoto"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        android:layout_marginStart="142dp"
        android:textSize="15sp"
        android:layout_marginTop="25dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/posts"
        android:layout_marginStart="130dp"
        android:textSize="15sp"
        android:layout_marginTop="50dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        android:layout_marginStart="220dp"
        android:textSize="15sp"
        android:layout_marginTop="25dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/followers"
        android:layout_marginStart="195dp"
        android:textSize="15sp"
        android:layout_marginTop="50dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        android:layout_marginStart="305dp"
        android:textSize="15sp"
        android:layout_marginTop="25dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/following"
        android:layout_marginStart="280dp"
        android:textSize="15sp"
        android:layout_marginTop="50dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:id="@+id/tv_profileFullName"
        android:layout_marginTop="100dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:id="@+id/tv_bio"
        android:layout_marginTop="120dp"/>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="140dp"
        android:id="@+id/btn_editProfile"
        android:background="@drawable/simple_button"
        android:text="@string/edit_profile"
        android:textSize="10sp"/>

</RelativeLayout>