<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".editProfileFragment">
    <include
        layout="@layout/editprofile_toolbar"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">
        <de.hdodenhof.circleimageview.CircleImageView
            app:civ_border_width="2dp"
            app:civ_border_color="#636363"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginTop="90dp"
            android:layout_centerHorizontal="true"
            android:id="@+id/ci_editPicture"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="190dp"
            android:text="@string/edit_picture"
            android:id="@+id/tv_editPicture"
            android:textColor="@color/MediumBlue"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_"
            android:textColor="@color/grey"
            android:textSize="15sp"
            android:layout_marginTop="230dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="255dp"
            android:id="@+id/et_editFullName"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Username"
            android:textColor="@color/grey"
            android:textSize="15sp"
            android:layout_marginTop="300dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="325dp"
            android:id="@+id/et_editUserName"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bio"
            android:textColor="@color/grey"
            android:textSize="15sp"
            android:layout_marginTop="375dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="400dp"
            android:id="@+id/et_editBio"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="save"
            android:layout_marginTop="450dp"
            android:textSize="15sp"
            android:id="@+id/btn_save"
            android:background="@drawable/simple_button"/>
    </RelativeLayout>

</RelativeLayout>